--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,8 @@
     {% if session %}
         <h1>Welcome {{session.userinfo.name}}!</h1>
         <p><a href="/logout">Logout</a></p>
-        <div><pre>{{pretty}}</pre></div>
+        <div><pre>JWT: {{session.id_token}}</pre></div>
+        <div><pre>User ID: {{session.user_id}}</pre></div>
     {% else %}
         <h1>Welcome Guest</h1>
         <p><a href="/login">Login</a></p>
